<resources>
    <string name="app_name">Road Trip Roulette</string>
    <string name="title_activity_navigation">Map</string>
    <string name="title_activity_main">Road Trip Roulette</string>

    <string name="action_settings">Settings</string>

    <string name="network_unavailable">Network Unavailable</string>

    <string name="title_activity_result">You Win!</string>

    <string name="banner_ad_unit_front_page">ca-app-pub-7998491028752978/3830578241</string>
    <string name="banner_ad_unit_result_page">ca-app-pub-7998491028752978/6784044649</string>

    <string name="distance_edit_text_label">How far?</string>
    <string name="search_term_hint_text">What? i.e. tacos, bars, nightlife, whatever.  Leave blank for random</string>
    <string name="title_activity_easter_egg">EasterEggActivity</string>

    <string name="you_win_text">You Win!</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_default_max_dist">125</string>
    <string name="pref_checkbox_summary">This changes the maximum distance the random feature can choose from</string>
    <string name="pref_list_title">Set Maximum Distance</string>
    <string name="pref_list_dialog_title">Choose Max Distance:</string>

    <string-array name="pref_user_max_dist">
        <item>5 Miles</item>
        <item>10 Miles</item>
        <item>15 Miles</item>
        <item>20 Miles</item>
        <item>25 Miles</item>
        <item>30 Miles</item>
        <item>35 Miles</item>
        <item>40 Miles</item>
        <item>45 Miles</item>
        <item>50 Miles</item>
        <item>60 Miles</item>
        <item>70 Miles</item>
        <item>80 Miles</item>
        <item>90 Miles</item>
        <item>100 Miles</item>
        <item>125 Miles</item>
        <item>150 Miles</item>
        <item>175 Miles</item>
        <item>200 Miles</item>
        <item>250 Miles</item>
        <item>300 Miles</item>
        <item>350 Miles</item>
        <item>400 Miles</item>
        <item>450 Miles</item>
        <item>500 Miles</item>
    </string-array>

    <string-array name="pref_user_max_dist_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
        <item>125</item>
        <item>150</item>
        <item>175</item>
        <item>200</item>
        <item>250</item>
        <item>300</item>
        <item>350</item>
        <item>400</item>
        <item>450</item>
        <item>500</item>
    </string-array>

    <string name="pref_category_list_title">Set Categories</string>
    <string name="pref_category_list_title_summary">Choose Random Selectable Categories:</string>
    <string name="pref_mask_data_title">Hide Business/City Name?</string>
    <string name="pref_mask_data_summary">This masks the business/city name in the result. You can view by tapping it</string>

    <array name="pref_user_selected_categories">
        <item>Food (all)</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Local Flavor</item>
        <item>Bars (all)</item>
        <item>Cocktails</item>
        <item>Piano Bars</item>
        <item>Rooftop Bars</item>
        <item>Dive Bars</item>
        <item>College Bars</item>
        <item>Sports Bars</item>
        <item>Lounges</item>
        <item>Nightclub</item>
        <item>Movie Theaters</item>
        <item>Amusement Parks</item>
        <item>Museums</item>
        <item>Shopping</item>
    </array>

    <array name="pref_user_selected_categories_values">
        <item>Food</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Local Flavor</item>
        <item>Bars</item>
        <item>Cocktails</item>
        <item>Piano Bars</item>
        <item>Rooftop Bars</item>
        <item>Dive Bars</item>
        <item>College Bars</item>
        <item>Sports Bars</item>
        <item>Lounges</item>
        <item>Nightclub</item>
        <item>Movie Theaters</item>
        <item>Amusement Parks</item>
        <item>Museums</item>
        <item>Shopping</item>
    </array>

    <array name="pref_default_selected_category">
        <item>Food</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Local Flavor</item>
        <item>Bars</item>
        <item>Cocktails</item>
        <item>Piano Bars</item>
        <item>Rooftop Bars</item>
        <item>Dive Bars</item>
        <item>College Bars</item>
        <item>Sports Bars</item>
        <item>Lounges</item>
        <item>Nightclub</item>
        <item>Movie Theaters</item>
        <item>Amusement Parks</item>
        <item>Museums</item>
        <item>Shopping</item>
    </array>

</resources>
