<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="pref_dist"
        android:title="Change Default Max Distance?"
        android:summary="@string/pref_checkbox_summary"
        android:defaultValue="false"/>
    <ListPreference
        android:dependency="pref_dist"
        android:key="pref_max_dist"
        android:title="@string/pref_list_title"
        android:summary="Custom Distance"
        android:dialogTitle="@string/pref_list_dialog_title"
        android:entries="@array/pref_user_max_dist"
        android:entryValues="@array/pref_user_max_dist_values"
        android:defaultValue="@string/pref_default_max_dist"/>

    <MultiSelectListPreference
        android:key="pref_categories"
        android:title="@string/pref_category_list_title"
        android:summary="@string/pref_category_list_title_summary"
        android:dialogTitle="Custom Selected Categories"
        android:entries="@array/pref_user_selected_categories"
        android:entryValues="@array/pref_user_selected_categories_values"
        android:defaultValue="@array/pref_default_selected_category"/>

    <CheckBoxPreference
        android:key="pref_data_masked"
        android:title="@string/pref_mask_data_title"
        android:summary="@string/pref_mask_data_summary"
        android:defaultValue="false"/>


</PreferenceScreen>